--- a/templates/page.html
+++ b/templates/page.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>COVID19 Daily Statistics and Prediction</title>
+        <title>COVID19 Current Date Statistics and Prediction</title>
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/covid19.css') }}">
     </head>
     <style>
