--- a/templates/page.html
+++ b/templates/page.html
@@ -33,7 +33,7 @@
         </script>
                     </td>
                     <td>
-                        <img src='/static/styles/Covid19.jpg'>
+                        <img src='/static/styles/Covid19.jpg' width="500" height="540">
                     </td>
                 </tr>
             </table>
